<resources>
    <string name="app_name">sufra</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sell_navigation">SellNavigationActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="foreget_password"><u>Foreget Password</u></string>
    <string name="title_activity_user_navigation">UserNavigationActivity</string>
    <string name="Registeration">Registeration</string>
    <string name="SplashAct_DescriptionTxt">This the first App for Food Selling and Request</string>
    <string name="splashact_requestfood_txt">Request Food</string>
    <string name="splashact_sellfood_txt">Selling Food</string>
    <string name="splashact_rights_txt">All Rights are Saved For Sofra app 2018</string>
    <string name="login_txt">Login</string>
    <string name="loginfr_pleaselogin_txt">Please Login</string>
    <string name="new_account">Create New Account</string>
    <string name="change_password">Changing Password</string>
    <string name="enter_thesent_code">Please Enter The Sent Code</string>
    <string name="enter_newpassword">Please Enter New Password</string>
    <string name="repeat_newpassword">Repeat New Password</string>
    <string name="please_wait">Please Wait</string>
    <string name="please_enter_yourmail">Please Enter Your E-Mail</string>
    <string name="send">Send</string>
    <string name="e_mail">E-Mail</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="description_of_your_living_place">Description of Your Living Place</string>
    <string name="password">password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="select_city">Select City</string>
    <string name="please_select_city">please select Your City</string>
    <string name="select_region">Select Region</string>
    <string name="please_select_region">Please Select your Region</string>
    <string name="please_enter_valid_email">please enter valid email address</string>
    <string name="continue_txt">Continue</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="select_categories">Select Categories</string>
    <string name="make_order">Make Order</string>
    <string name="min_request">Min Request</string>
    <string name="delivery_commision">Delivery Commision</string>
    <string name="saudi_real">S.R</string>
    <string name="open_now">Open Now</string>
    <string name="your_review_has_beensent">Your Review has been sent</string>
    <string name="reviews_comments">Reviews and Comments</string>
    <string name="we_are_happy_to_share_us_with_your_reviews">We are Happy to Share us with your Reviews</string>
    <string name="add_review_or_comment">Add Review or Comment</string>
    <string name="deleting_item">Deleting Item</string>
    <string name="restaurant_menu">Restaurant Menu</string>
    <string name="about_resaurant">About Restaurant</string>
    <string name="cart">Cart</string>
    <string name="price_txt">Price</string>
    <string name="quantity_txt">Quantity</string>
    <string name="total_price">Total :</string>
    <string name="please_select_payment">Please Select Payment Method</string>
    <string name="request_details">Request Details</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="notes">Notes</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment">Payment</string>
    <string name="add_new_offer">Add NEW oFFER</string>
    <string name="endat">End at :</string>
    <string name="old_requests">OldRequests</string>
    <string name="current_requests">CurrentRequests</string>
    <string name="request_num">RequestNum :</string>
    <string name="address">Address  :</string>
    <string name="total">Total :</string>
    <string name="delivery_confirmation">delivery confirmation</string>
    <string name="accept_order">The order is Accepted</string>
    <string name="addnewitem">Add new Item</string>
    <string name="update_menu_item">Update Menu Item</string>
    <string name="updatebtn">Update</string>
    <string name="please_select_img_txt">Please Select Image</string>
    <string name="product_name">Product Name</string>
    <string name="description">Description</string>
    <string name="preparation_time">Preparation Time</string>
    <string name="add_product_image">Add Product Image</string>
    <string name="add">Add</string>
    <string name="add_offer">Add Offer</string>
    <string name="add_newoffer_loading">Adding New Offer ....</string>
    <string name="offer_short_description">Offer short Description</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="add_picture_for_offer">Add Picture For OFFER</string>
    <string name="myproducts">My Products</string>
    <string name="add_new_product">Add new Product</string>
    <string name="myoffers">My Offers</string>
    <string name="contact_us">Contact Us</string>
    <string name="message_has_been_sent_txt">Message has Been Sent</string>
    <string name="full_name">Full Name</string>
    <string name="commision_title_txt">Please convert 10% of the profit sold in a maximum of one month, noting that all orders will be recorded on your personal account</string>
    <string name="restaurant_sales">Restaurant Sales</string>
    <string name="application_commsion">Application Commsion</string>
    <string name="residual">Residual</string>
    <string name="institution_sufra">Institution Sufra</string>
    <string name="aboutapp_txt">This app is Used If You are client you can make order from the Resturants signed in the app ,,if you are restaurant you can share your menu and Offers and get orders to deliver to clients</string>
    <string name="new_requests">New  Requests</string>
    <string name="accept">Accept</string>
    <string name="refuse">refuse</string>
    <string name="requestnum">RequestNum</string>
    <string name="delivery_txt">Delivery :</string>
    <string name="price">Price :</string>
    <string name="request_numb_txt">RequestNum :</string>
    <string name="total_txt">Total :</string>
    <string name="do_you_want_to_delete">Do you want to delete This Item</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="EditProfile">Edit Profile</string>

    <string name="welcome">welcome</string>
    <string name="please_sign_in">Welcome User Please Sign in</string>
    <string name="welcome_">Welcome..</string>
    <string name="nav_home">Home</string>
    <string name="nav_myrequests">My Request</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_newoffers">New Offers</string>
    <string name="nav_rules">Rules</string>
    <string name="nav_share_app">Share App</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_signout">SignOut</string>
    <string name="nav_commision">Commision</string>
    <string name="nav_requests_submitted">Requests Submitted</string>
    <string name="nav_myproducts">MyProducts</string>
    <string name="nav_myoffers">MyOffers</string>
    <string name="nav_about_app">About App</string>
    <string name="no_old_requests">There are no Requests</string>
    <string name="requestdetails">RequestsDetails</string>
    <string name="res_status">Status</string>
    <string name="res_city">City</string>
    <string name="res_region">Region</string>
    <string name="res_minimum_charger">Minimum Charger</string>
    <string name="res_delivery_cost">Delivery Cost</string>
    <string name="res_open">Open</string>
    <string name="res_closed">Closed</string>
    <string name="res_is_closed">The Restaurant is Closed</string>
    <string name="res_is_open">The Restaurant Is Open</string>
    <string name="offer_name">Offer Name</string>
    <string name="start_at">Start at</string>
    <string name="offer_details">Offer Details</string>
    <string name="offer_is_removed">The Offer has been removed</string>
    <string name="select_pic_for_offer">please select picture for offer</string>
    <string name="offer_updated">The offer has been updated</string>
    <string name="update_offer">Update Offer</string>
    <string name="edit_menuitem">Edit MenuItem</string>
</resources>
