<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        style="@style/WhiteText"
        android:textColor="@color/black"
        android:text="@string/foreget_password"
        android:drawableStart="@drawable/ic_person_yellow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_XXL"
        android:layout_marginBottom="@dimen/dimen_MM"
        android:layout_above="@id/ForgetPasswordStep1Fr_EnterpassHeaderTv"
        />

    <TextView
      style="@style/WhiteText"
        android:textColor="@color/black"
        android:layout_above="@id/ForgetPasswordStep1Fr_MailEt"
        android:layout_marginBottom="@dimen/dimen_M"
        android:textStyle="normal"
        android:id="@+id/ForgetPasswordStep1Fr_EnterpassHeaderTv"
        android:layout_centerHorizontal="true"
        android:text="@string/please_enter_yourmail"/>
    <android.support.design.widget.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_above="@id/ForgetPasswordStep1Fr_SendBtn"
        android:id="@+id/ForgetPasswordStep1Fr_MailEt"
        android:layout_marginBottom="@dimen/dimen_M"
        android:hint="@string/e_mail"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_XL"
        style="@style/GreenButton"
        android:layout_centerInParent="true"
        android:id="@+id/ForgetPasswordStep1Fr_SendBtn"
        android:text="@string/send"/>
</RelativeLayout>