<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RequestFood.Fragment.UserCycle.UserRegisterFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:id="@+id/RequestRegisterFr_InputRootLayout">

       <android.support.design.widget.TextInputLayout
           style="@style/TextInputLayout"
           android:id="@+id/UserRegisterFr_NameEt"
           android:hint="@string/name"
           android:layout_marginTop="@dimen/dimen_MM">

           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@null"
               android:inputType="text"/>
       </android.support.design.widget.TextInputLayout>
       <android.support.design.widget.TextInputLayout
           style="@style/TextInputLayout"
           android:id="@+id/UserRegisterFr_MailEt"
           android:layout_marginTop="@dimen/dimen_MMM"
           android:hint="@string/email"
           >
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@null"
               android:inputType="textEmailAddress"/>
       </android.support.design.widget.TextInputLayout>
       <android.support.design.widget.TextInputLayout
           style="@style/TextInputLayout"
           android:id="@+id/UserRegisterFr_PhoneEt"
           android:hint="@string/phone_number"
           android:layout_marginTop="@dimen/dimen_MMM"
          >
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@null"
               android:inputType="number"/>
       </android.support.design.widget.TextInputLayout>
       <RelativeLayout
           style="@style/TextInputLayout"
           android:layout_marginTop="@dimen/dimen_MMM"
           android:id="@+id/UserRegisterFr_CitySpLayout"
          >
           <Spinner
               android:layout_width="match_parent"
               android:layout_height="@dimen/dimen_XXL"
               android:id="@+id/UserRegisterFr_CitySp"></Spinner>
       </RelativeLayout>
       <RelativeLayout
           style="@style/TextInputLayout"
           android:layout_marginTop="@dimen/dimen_MMM"
           android:id="@+id/UserRegisterFr_RegionSpLayout"
           >
           <Spinner
               android:layout_width="match_parent"
               android:layout_height="@dimen/dimen_XXL"
               android:id="@+id/UserRegisterFr_RegionSp"></Spinner>
       </RelativeLayout>
       <android.support.design.widget.TextInputLayout
           style="@style/TextInputLayout"
           android:id="@+id/UserRegisterFr_PlaceDescriptionEt"
           android:layout_marginTop="@dimen/dimen_MMM"
           android:layout_height="@dimen/dimen_H"
           android:hint="@string/description_of_your_living_place"
           android:paddingTop="@dimen/dimen_S"
           >
       <EditText
          android:layout_width="match_parent"
           android:layout_height="@dimen/dimen_H"
           android:background="@null"
           android:inputType="text"
           />
       </android.support.design.widget.TextInputLayout>
       <android.support.design.widget.TextInputLayout
           style="@style/TextInputLayout"
           android:id="@+id/UserRegisterFr_PasswordEt"
           android:hint="@string/password"
           android:layout_marginTop="@dimen/dimen_MM"
          >
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@null"
               android:inputType="textPassword"/>
       </android.support.design.widget.TextInputLayout><android.support.design.widget.TextInputLayout
           style="@style/TextInputLayout"
           android:id="@+id/UserRegisterFr_RepeatPasswordEt"
           android:hint="@string/repeat_password"
           android:layout_marginTop="@dimen/dimen_MMM"
           >
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@null"
               android:inputType="textPassword"/>
       </android.support.design.widget.TextInputLayout>

   </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_XL"
        style="@style/GreenButton"
        android:layout_below="@id/RequestRegisterFr_InputRootLayout"
        android:layout_marginTop="@dimen/dimen_M"
        android:id="@+id/UserRegisterFr_RegisterBtn"
        android:text="@string/register"/>


</RelativeLayout>